--- a/Pertemuan 2/Tugas Menangani Autokorelasi (IPM).Rmd
+++ b/Pertemuan 2/Tugas Menangani Autokorelasi (IPM).Rmd
@@ -1,1 +1,160 @@
+---
+title: "MPDW PRAK 3"
+author: "Raihanah Nurkhalishah"
+date: "2025-09-02"
+output: html_document
+---
 
+```{r}
+library(dplyr)
+library(TTR)
+library(forecast)
+library(lmtest)
+library(readxl)
+```
+```{r}
+install.packages("orcutt")
+install.packages("HoRM")
+```
+```{r}
+install.packages("remotes")
+remotes::install_cran("orcutt")
+```
+
+```{r}
+install.packages("https://cran.r-project.org/src/contrib/Archive/orcutt/orcutt_2.0.tar.gz",
+                 repos = NULL, type = "source")
+
+```
+## Input Data
+```{r}
+ipmjatim = read_excel("C:/Users/Imam/Downloads/Jatim.xlsx")
+View(ipmjatim)
+```
+
+## 2. Pemodelan Awal
+```{r}
+# Membuat model regresi OLS (Ordinary Least Squares)
+model_ipm <- lm(ipm ~ Tahun, data = ipmjatim)
+summary(model_ipm)
+```
+Berdasarkan hasil regresi OLS, diperoleh bahwa variabel Tahun berpengaruh positif dan signifikan terhadap IPM di Jawa Timur. **Koefisien regresi sebesar 0,06081** menunjukkan bahwa setiap kenaikan satu tahun akan meningkatkan nilai IPM rata-rata sebesar 0,06 poin. Lalu didapatkan **Nilai Adjusted R-squared sangat tinggi (0.9913)** yang berarti 99,19% variasi IPM dapat dijelaskan oleh variabel Tahun.
+
+## 3. Diagnosis (Investigasi Sisaan)
+### 3.1 Diagnosis Visual
+```{r}
+# Ambil sisaan dari model
+sisaan_awal <- residuals(model_ipm)
+
+# Plot sisaan terhadap waktu
+plot(ipmjatim$Tahun, sisaan_awal, type="o", pch=20, col="red",
+     main="Plot Sisaan vs Waktu", xlab="Tahun", ylab="Sisaan")
+abline(h=0, lty=2) # Garis referensi di y=0
+```
+Grafik residual terhadap waktu menunjukkan adanya pola sistematis (autokorelasi), bukan acak. Hal ini menandakan asumsi independensi residual tidak terpenuhi.
+
+
+### 3.2 Diagnosis formal (Uji Durbin-Watson)
+-   **H0 (Hipotesis Nol)**: Tidak ada autokorelasi. Sisaan saling bebas.
+-   **H1 (Hipotesis Alternatif)**: Ada autokorelasi.
+
+```{r}
+dwtest(model_ipm)
+```
+Berdasarkan hasil uji Durbin–Watson dengan nilai DW = 0,42882 dan p-value = 3,91e-06, dapat disimpulkan bahwa terdapat autokorelasi positif yang signifikan pada residual model regresi.
+
+## 4. Penanganan (Menyembuhkan Model)
+### Metode 1: Cochrane-Orcutt
+```{r}
+model_co <- cochrane.orcutt(model_ipm)
+summary(model_co)
+
+# rho paling optimum
+rho <- model_co$rho
+cat("Rho optimum:", rho)
+```
+**Hasil Penanganan (C-O):**
+- Nilai Rho optimum = 0,7368 mengindikasikan tingkat autokorelasi awal yang cukup kuat, tetapi berhasil dikoreksi dengan transformasi.
+- Nilai DW awal = 0,43 dengan p-value = 3,91e-06. Setelah dilakukan metode Cochrane-Orcutt, nilai DW = 1,8 dengan p-value = 0,2555 → artinya tidak ada lagi autokorelasi signifikan setelah koreksi.
+
+**Verifikasi Manual:**
+```{r}
+ipm.trans <- ipmjatim$ipm[-1] - ipmjatim$ipm[-14]*rho
+
+tahun.trans <- ipmjatim$Tahun[-1] - ipmjatim$Tahun[-14]*rho
+model_co_manual <- lm(ipm.trans~tahun.trans)
+
+b0_co_manual <- coef(model_co_manual)[1]/(1-rho)
+b1_co_manual <- coef(model_co_manual)[2]
+cat("Koefisien manual Cochrane-Orcutt:\n")
+cat("b0:", b0_co_manual, "\n")
+cat("b1:", b1_co_manual, "\n")
+```
+
+### Metode 2: Hildreth-Lu
+```{r}
+#Penanganan Autokorelasi Hildreth lu
+
+hildreth.lu.func<- function(r, model_ipm){
+  x <- model.matrix(model_ipm)[,-1]
+  y <- model.response(model.frame(model_ipm))
+  n <- length(y)
+  t <- 2:n
+  y <- y[t]-r*y[t-1]
+  x <- x[t]-r*x[t-1]
+  
+  return(lm(y~x))
+}
+
+#Pencariab rho yang meminimumkan SSE
+r <- c(seq(0.1,0.9, by= 0.1))
+tab <- data.frame("rho" = r, "SSE" = sapply(r, function(i){deviance(hildreth.lu.func(i, model_ipm))}))
+round(tab, 4)
+```
+Pada hasil di atas terlihat ρ minimum ketika 0.7. Namun, hasil tersebut masih kurang teliti sehingga akan dicari kembali ρ yang lebih optimum dengan ketelitian yang lebih. Jika sebelumnya jarak antar ρ yang dicari adalah 0.1, kali ini jarak antar ρ adalah 0.001 dan dilakukan pada selang 0.6 sampai dengan 0.9.
+
+```{r}
+#Rho optimal di sekitar 0.4
+rOpt <- seq(0.6,0.9, by= 0.001)
+tabOpt <- data.frame("rho" = rOpt, "SSE" = sapply(rOpt, function(i){deviance(hildreth.lu.func(i, model_ipm))}))
+head(tabOpt[order(tabOpt$SSE),])
+```
+Dari hasil analisis tersebut, didapatkan SSE terkecil yaitu 0.254 dengan ρ sebesar 0.737.
+
+```{r}
+#Grafik SSE optimum
+par(mfrow = c(1,1))
+plot(tab$SSE ~ tab$rho , type = "l", xlab = "Rho", ylab = "SSE")
+abline(v = tabOpt[tabOpt$SSE==min(tabOpt$SSE),"rho"], lty = 2, col="red",lwd=2)
+text(x=0.737, y=0.2543887, labels = "rho=0.737", cex = 0.8)
+```
+
+```{r}
+model_hl <- hildreth.lu(ipmjatim$ipm, ipmjatim$Tahun, rho = 0.737)
+summary(model_hl)
+```
+
+```{r}
+#Transformasi Balik
+cat("y = ", coef(model_hl)[1]/(1-0.737), "+", coef(model_hl)[2],"x", sep = "")
+```
+```{r}
+#Deteksi autokorelasi
+dwtest(model_hl)
+```
+
+```{r}
+# Menghitung SSE untuk setiap model secara manual
+sse_awal <- sum(residuals(model_ipm)^2)
+sse_co <- sum(residuals(model_co)^2)
+sse_hl <- sum(residuals(model_hl)^2)
+
+# Membuat tabel perbandingan
+data.frame(
+  Metode = c("Model Awal (Ada Autokolerasi)", "Cochrane-Orcutt (Sudah Ditangani)", "Hildreth-Lu (Sudah Ditangani)"),
+  SSE = c(sse_awal, sse_co, sse_hl),
+  DW_Statistic = c(dwtest(model_ipm)$statistic, model_co$DW[3], dwtest(model_hl)$statistic)
+)
+```
+
+Berdasarkan hasil analisis, keduanya berhasil menghilangkan autokorelasi, yang ditunjukkan oleh statistik DW yang mendekati 2. Namun, metode Hildreth Lu menghasilkan SSE yang lebih kecil daripada metode Cochrane-Orcutt. Dengan demikian, dapat disimpulkan bahwa model regresi dengan koreksi Hildreth-Lu merupakan model terbaik yang dapat digunakan karena memenuhi asumsi klasik dan memiliki tingkat kesalahan prediksi yang paling rendah.
